<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/class_name"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:text="@string/class1"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_item"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintHorizontal_weight="3" />

    <Button
        android:id="@+id/btn_add_item"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/add_item_kr"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btn_setting"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="40dp"
        android:text="@string/setting_kr"
        android:textSize="12sp"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/notice"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/notice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_name" />

    <Button
        android:id="@+id/course"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/online_lecture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notice" />

    <Button
        android:id="@+id/homework"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/homework"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/course" />

    <Button
        android:id="@+id/exam"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/exam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homework" />

</androidx.constraintlayout.widget.ConstraintLayout>
