<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SettingFragment">


    <LinearLayout
        android:id="@+id/settingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/alarm_time"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/alarm_time_kr"/>

        <Button
            android:id="@+id/export_calendar"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/export_calendar" />

        <Button
            android:id="@+id/personal_info_modify"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/personal_info_modify"/>



    </LinearLayout>
</layout>
