<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home_dashboard">

    <fragment
        android:id="@+id/navigation_home_dashboard"
        android:name="com.example.se_al.ui.home.HomeDashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_home_dashboard" />


    <fragment
        android:id="@+id/navigation_class_list"
        android:name="com.example.se_al.ui.classList.ClassListFragment"
        android:label="@string/title_classlist"
        tools:layout="@layout/fragment_class_list">
        <action
            android:id="@+id/action_navigation_class_list_to_classBaseFragment"
            app:destination="@id/classBaseFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.se_al.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_navigation_setting_to_settingAlarmTimeFragment"
            app:destination="@id/settingAlarmTimeFragment" />
        <action
            android:id="@+id/action_navigation_setting_to_settingPersonalInfoFragment"
            app:destination="@id/settingPersonalInfoFragment" />
    </fragment>

    <fragment
        android:id="@+id/classBaseFragment"
        android:name="com.example.se_al.ui.ClassBase.ClassBaseFragment"
        android:label="ClassBaseFragment">
        <action
            android:id="@+id/action_classBaseFragment_to_classBaseAlarmSettingFragment"
            app:destination="@id/classBaseAlarmSettingFragment" />
        <action
            android:id="@+id/action_classBaseFragment_to_navigation_class_list"
            app:destination="@id/navigation_class_list" />
        <action
            android:id="@+id/action_classBaseFragment_to_alarmAddFragment"
            app:destination="@id/alarmAddFragment" />
        <action
            android:id="@+id/action_classBaseFragment_to_alarmBaseListFragment"
            app:destination="@id/alarmBaseListFragment" />
        <action
            android:id="@+id/action_classBaseFragment_to_alarmFixFragment"
            app:destination="@id/alarmFixFragment" />
    </fragment>

    <fragment
        android:id="@+id/classBaseAlarmSettingFragment"
        android:name="com.example.se_al.ui.classList.ClassBaseAlarmSettingFragment"
        android:label="ClassBaseAlarmSettingFragment">
        <action
            android:id="@+id/action_classBaseAlarmSettingFragment_to_classBaseFragment"
            app:destination="@id/classBaseFragment" />
    </fragment>

    <fragment
        android:id="@+id/alarmAddFragment"
        android:name="com.example.se_al.ui.AlarmAddFragment"
        android:label="AlarmAddFragment">
        <action
            android:id="@+id/action_alarmAddFragment_to_classBaseFragment"
            app:destination="@id/classBaseFragment" />
    </fragment>

    <fragment
        android:id="@+id/alarmFixFragment"
        android:name="com.example.se_al.ui.AlarmFixFragment"
        android:label="AlarmFixFragment">
        <action
            android:id="@+id/action_alarmFixFragment_to_alarmBaseListFragment"
            app:destination="@id/alarmBaseListFragment" />
    </fragment>

    <fragment
        android:id="@+id/alarmBaseListFragment"
        android:name="com.example.se_al.ui.AlarmBaseListFragment"
        android:label="AlarmBaseListFragment">
        <action
            android:id="@+id/action_alarmBaseListFragment_to_alarmFixFragment"
            app:destination="@id/alarmFixFragment" />
        <action
            android:id="@+id/action_alarmBaseListFragment_to_classBaseFragment"
            app:destination="@id/classBaseFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingAlarmTimeFragment"
        android:name="com.example.se_al.ui.setting.SettingAlarmTimeFragment"
        android:label="SettingAlarmTimeFragment" />
    <fragment
        android:id="@+id/settingPersonalInfoFragment"
        android:name="com.example.se_al.ui.setting.SettingPersonalInfoFragment"
        android:label="SettingPersonalInfoFragment" />

</navigation>